--- a/New_website_selection_form.html
+++ b/New_website_selection_form.html
@@ -293,6 +293,28 @@
                         <!-- Start Support Package Selection -->
                     </div>
 
+                    <div class="RequestedPreview sc7" style="display: none">
+                        <!-- Start Requested Preview -->
+                        <h2>Website Preview: <span class="required"></span><img src="/branches/library/images/info_icon_sm.png" alt="Tooltip" data-toggle="tooltip" title="Select 1 (one)." style="padding-bottom: 5px;" /><br /><span style="font-weight:normal">This preview stage is intended to allow you to identify missed or incorrect information, and is NOT for making revisions to the website.</span></h2>
+                        <div class="parentdivborder">
+                            <div>
+                                <label style="font-weight:normal">
+                                  <input type="radio" name="preview" value="Yes" class="PreviewSelected"/>&nbsp Yes
+                              </label>
+                                <div class="previewselected" style="display: none">
+                                    <label class="PreviewSelected">
+									<input type="checkbox" name="previewagreement" value="Agreed" class="previewbox" /> By checking this option, I acknowledge that a preview can lead to a delay with the publishing of the updated website. Visit out <a href="https://myrjnet.rjf.com/ResourcesandSupport/CorporateServices/Marketing/Resources/WebMarketing/AdvisorWebsites/Enhanced/Pages/default.aspx" target="_blank">FAQ page</a> for more information.</label>
+                                </div>
+                                <br />
+                                <label style="font-weight:normal">
+                                  <input type="radio" name="preview" value="No" checked />&nbsp No
+                              </label>
+                                <br />
+                            </div>
+                        </div>
+                        <!-- End Requested Preview -->
+                    </div>
+
                     <div class="all">
                         <!-- Start Template and Color Selection -->
                         <h2>Template and Color:<span class="required"></span> <img src="/branches/library/images/info_icon_sm.png" alt="Tooltip" data-toggle="tooltip" title="Select 1 (one)." style="padding-bottom: 5px;" /><br/><span style="font-weight: normal"> Below are the nine website color template and color combinations (three templates across three colors). To enlarge each template preview, please click on the corresponding image. Please select the template and color combination you would like applied to your website. </span></h2>
@@ -419,7 +441,7 @@
                                         <optgroup label="Regions">
                                             <option value="California Coast">California Coast</option>
                                             <option value="Florida Coast">Florida Coast</option>
-                                            <option value="Midwest">Midwest</option>
+                                            <option value="MidWest">Midwest</option>
                                             <option value="Smokies Appalachian">Smokies Appalachian</option>
                                             <option value="Southwest">Southwest</option>
                                         <optgroup label="General">
@@ -429,7 +451,6 @@
                                             <option value="Golf">Golf</option>
                                             <option value="Interpersonal">Interpersonal Interactions</option>
                                             <option value="Journey">Journey</option>
-                                            <option value="LGBT">LBGT</option>
                                             <option value="Nautical">Nautical</option>
                                             <option value="People">People</option>
                                     </select>
@@ -603,7 +624,7 @@
                                 </label>
                                 <br />
                                 <label style="display:none" class="CustomQuote">
-                                    <input type="radio" name="HomePage_Quote" value="Custom Quote" />&nbsp;Custom Quote.</label>
+                                    <input type="radio" name="HomePage_Quote" value="Custom Quote" />&nbsp;&nbsp;Custom Quote.</label>
                                 <span class="spanCustomQuote"></span>
                                 <label>
                                     <input type="radio" name="HomePage_Quote" value="Do not include a quote" />
@@ -996,19 +1017,19 @@
                         <!-- End What Makes Us Different  -->
                     </div>
 
-                    <div class="all RJ">
+                    <div class="all AboutRJ">
                         <!-- Start About Raymond James -->
                         <h2>About Raymond James:<span class="required"></span><img src="/branches/library/images/info_icon_sm.png" alt="Tooltip" data-toggle="tooltip" title="Select 1 (one)." style="padding-bottom: 5px;" /></h2>
                         <div class="parentdivborder">
                             <div>
                                 <label>
-                                    <input type="radio" name="about" value="About Raymond James_Conservative pragmatic and proud of the way we do business" />
-                                    <a data-item="AboutRJ1" data-toggle="modal" data-target="#myModal"> Conservative, pragmatic and proud of the way we do business</a>
+                                    <input type="radio" name="about" value="About Raymond James_Raymond James: Our dedicated partner" />
+                                    <a data-item="AboutRJ2" data-toggle="modal" data-target="#myModal"> Raymond James: Our dedicated partner</a>
                                 </label>
                                 <br />
                                 <label>
-                                    <input type="radio" name="about" value="About Raymond James_Raymond James: Our dedicated partner" />
-                                    <a data-item="AboutRJ2" data-toggle="modal" data-target="#myModal"> Raymond James: Our dedicated partner</a>
+                                    <input type="radio" name="about" value="About Raymond James_Conservative pragmatic and proud of the way we do business" />
+                                    <a data-item="AboutRJ1" data-toggle="modal" data-target="#myModal"> Conservative, pragmatic and proud of the way we do business</a>
                                 </label>
                                 <br />
                                 <label style="font-weight:normal">
@@ -1017,22 +1038,6 @@
                             </div>
                         </div>
                         <!-- End About Raymond James  -->
-                    </div>
-
-                    <div class="all AlexBrown">
-                        <!-- Start About Alex Brown -->
-                        <h2>About Alex Brown:<span class="required"></span><img src="/branches/library/images/info_icon_sm.png" alt="Tooltip" data-toggle="tooltip" title="Select 1 (one)." style="padding-bottom: 5px;" /></h2>
-                        <div class="parentdivborder">
-                            <div>
-                                <label>
-                                    <input type="radio" name="about" value="AboutAB1 - Alex Brown: a legacy of uncompromising service" checked/>
-                                    <a data-item="AboutAB1" data-toggle="modal" data-target="#myModal"> Alex. Brown: a legacy of uncompromising service</a>
-                                </label>
-                                <br />
-
-                            </div>
-                        </div>
-                        <!-- End About Alex Brown -->
                     </div>
 
                     <p class="cspaid">By selecting "Submit" below and submitting information requested for the free of your website to the new system, you agree to be charged the applicable amount for the monthly support package selected. This charge will not take effect until your site migration is complete.</p>
