--- a/New_website_selection_form.html
+++ b/New_website_selection_form.html
@@ -121,37 +121,37 @@
                             </div>
                             <div>
                                 <label>Address 1</label>
-                                <input type="text" name="mailingAddress1" class="textField requiredField form-control" placeholder="&nbsp Branch Address 1"
+                                <input type="text" name="mailingAddress1" class="textField requiredField form-control" placeholder="&nbsp; Branch Address 1"
                                 />
                             </div>
                             <div>
                                 <label>Address 2</label>
-                                <input type="text" name="mailingAddress2" class="textField form-control" placeholder="&nbsp Branch Address 2" />
+                                <input type="text" name="mailingAddress2" class="textField form-control" placeholder="&nbsp; Branch Address 2" />
                             </div>
                             <div>
                                 <label>City</label>
-                                <input type="text" name="city" class="textField requiredField form-control" placeholder="&nbsp Branch City" />
+                                <input type="text" name="city" class="textField requiredField form-control" placeholder="&nbsp; Branch City" />
                             </div>
                             <div>
                                 <label>State</label>
-                                <input type="text" name="state" class="textField requiredField form-control" placeholder="&nbsp Branch State" />
+                                <input type="text" name="state" class="textField requiredField form-control" placeholder="&nbsp; Branch State" />
                             </div>
                             <div>
                                 <label>Zip Code</label>
-                                <input type="text" name="zip" class="textField requiredField zip form-control" placeholder="&nbsp Branch Zip Code" />
+                                <input type="text" name="zip" class="textField requiredField zip form-control" placeholder="&nbsp; Branch Zip Code" />
                             </div>
                             <div>
                                 <label>Contact Phone Number 1</label>
-                                <input type="text" name="phone1" class="textField requiredField phone form-control" placeholder="&nbsp Branch Phone Number 1"
+                                <input type="text" name="phone1" class="textField requiredField phone form-control" placeholder="&nbsp; Branch Phone Number 1"
                                 />
                             </div>
                             <div>
                                 <label>Contact Phone Number 2</label>
-                                <input type="text" name="phone2" class="textField phone form-control" placeholder="&nbsp Branch Phone Number 2" />
+                                <input type="text" name="phone2" class="textField phone form-control" placeholder="&nbsp; Branch Phone Number 2" />
                             </div>
                             <div>
                                 <label>Contact Fax Number</label>
-                                <input type="text" name="fax" class="textField phone form-control" placeholder="&nbsp Branch Fax Number" />
+                                <input type="text" name="fax" class="textField phone form-control" placeholder="&nbsp; Branch Fax Number" />
                             </div>
                             <div>
                                 <label>Broker/Dealer Affiliation</label>
