--- a/New_website_selection_form.html
+++ b/New_website_selection_form.html
@@ -85,7 +85,7 @@
                 </div>
                 <form name="frmName" id="frmName" method="post" action="process2.asp" onsubmit="return validateForm(this);">
 
-                    <div class="transitioning">
+                    <div class="transitioning current">
                         <!-- Start Marketing/Transitioning Consultant Information -->
                         <h2>Marketing/Transitioning Consultant:
                             <br/>
@@ -105,7 +105,7 @@
                         <!-- End Marketing/Transitioning Consultant Information -->
                     </div>
 
-                    <div class="transitioning">
+                    <div class="transitioning current">
                         <!-- Start Transitioning Website Owner Information -->
                         <h2>Transitioning Website Owner Information:
                             <span class="required"></span>
