--- a/New_website_selection_form.html
+++ b/New_website_selection_form.html
@@ -188,9 +188,9 @@
                             <div>
                                 <label>Do you currently own a custom domain?</label>
                                 <label>
-                                    <input type="radio" name="domain" value="Yes" onchange="showHideElement(this,customDomainName)" />&nbsp Yes</label>
+                                    <input type="radio" name="domain" value="Yes" onchange="showHideElement(this,customDomainName)" />&nbsp; Yes</label>
                                 <label>
-                                    <input type="radio" name="domain" value="No" onchange="showHideElement(this,customDomainName)" />&nbsp No</label>
+                                    <input type="radio" name="domain" value="No" onchange="showHideElement(this,customDomainName)" />&nbsp; No</label>
                             </div>
                             <div class="hidden" id="customDomainName">
                                 <label>Provide custom domain here</label>
@@ -363,20 +363,20 @@
                         <div class="pad parentdivborder">
                             <div>
                                 <label>
-                                    <input type="radio" name="supportPackage" value="Gold" />&nbsp Gold &ndash; $90/month
+                                    <input type="radio" name="supportPackage" value="Gold" />&nbsp; Gold &ndash; $90/month
                                     <span style="font-weight:normal"> &ndash; Gold provides Web Services coverage for advisors who foresee needing edits that
                                         are more complex, comprehensive or submitted frequently.</span>
                                 </label>
                                 <br />
                                 <label>
-                                    <input type="radio" name="supportPackage" value="Silver" />&nbsp Silver &ndash; $45/month
+                                    <input type="radio" name="supportPackage" value="Silver" />&nbsp; Silver &ndash; $45/month
                                     <span style="font-weight:normal"> &ndash; Silver,
                                         <span style="text-decoration: underline;">our default plan</span>, is designed to serve the needs of most advisors and offers
                                         Web Services support for common, straightforward website requests.</span>
                                 </label>
                                 <br />
                                 <label class="csfreebronze">
-                                    <input type="radio" name="supportPackage" value="Bronze" />&nbsp Bronze &ndash; $25/month
+                                    <input type="radio" name="supportPackage" value="Bronze" />&nbsp; Bronze &ndash; $25/month
                                     <span style="font-weight:normal"> &ndash; Bronze covers secure website hosting, built-in automated content feeds, website
                                         compliance and self-editing.</span>
                                 </label>
@@ -400,7 +400,7 @@
                         <div class="parentdivborder">
                             <div>
                                 <label style="font-weight:normal">
-                                    <input type="radio" name="preview" value="Yes" class="PreviewSelected" />&nbsp Yes
+                                    <input type="radio" name="preview" value="Yes" class="PreviewSelected" />&nbsp; Yes
                                 </label>
                                 <div class="previewselected" style="display: none">
                                     <label class="PreviewSelected">
@@ -411,7 +411,7 @@
                                 </div>
                                 <br />
                                 <label style="font-weight:normal">
-                                    <input type="radio" name="preview" value="No" checked />&nbsp No
+                                    <input type="radio" name="preview" value="No" checked />&nbsp; No
                                 </label>
                                 <br />
                             </div>
